--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <img src="IMG_643CB0EC-EC17-4052-A1F7-5CB5A040524C.jpeg" alt="birthday">
+  <img src="img.jpg" alt="birthday">
   <h1>🎂 Happy Birthday! 🎉</h1>
   <p>Wishing you a day filled with love, laughter, and memories!</p>
   <a href="gallery.html" class="btn">Next 🎁</a>
