Enhance birthday gallery with new greeting
Updated the birthday greeting and added decorative emojis.

--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,7 @@
   </style>
 </head>
 <body>
-  <h1>💐 Happy Birthday! 💐</h1>
+  <h1> Happy Birthday! 🎀💗᪲᪲᪲ </h1>
 
   <div class="carousel">
     <img src="img.jpg.jpg" style="transform: rotateY(0deg) translateZ(400px);">
@@ -69,3 +69,4 @@
   </div>
 </body>
 </html>
+
