Update title and button text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday 🎂</title>
+  <title>Happy Birthday Mdamji </title>
   <style>
     body {
       margin: 0;
@@ -66,7 +66,8 @@
   <img src="final_birthday.png" alt="birthday">
   <h1>🎂 Happy Birthday! 🎉</h1>
   <p>Wishing you a day filled with love, laughter, and memories!</p>
-  <a href="gallery.html" class="btn">Next 🎁</a>
+  <a href="gallery.html" class="btn"> Click Next 🎁</a>
 </body>
 </html>
+
 
