Fix image source and HTML structure
Corrected the image source filename and ensured proper HTML structure.

--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
   </style>
 </head>
 <body>
-  <img src="final_birthday.png" alt="birthday">
+  <img src="finall_birthday.png" alt="birthday">
   <h1>🎂 Happy Birthday! 🎉</h1>
   <p>Wishing you a day filled with love, laughter, and memories!</p>
   <a href="gallery.html" class="btn"> Click Next 🎁</a>
 </body>
 </html>
+
 
 
