Update image sources and heading in gallery.html
Updated image sources in the carousel and modified the heading text.

--- a/gallery.html
+++ b/gallery.html
@@ -57,11 +57,11 @@
   </style>
 </head>
 <body>
-  <h1> Happy Birthday! 🎀💗᪲᪲᪲ </h1>
+  <h1> Happy Birthday! madamji 🎀💗᪲᪲᪲ </h1>
 
   <div class="carousel">
     <img src="img.jpg.jpg" style="transform: rotateY(0deg) translateZ(400px);">
-    <img src="img.03.jpg.jpg" style="transform: rotateY(60deg) translateZ(400px);">
+    <img src="img56.jpg" style="transform: rotateY(60deg) translateZ(400px);">
     <img src="img45.jpg.jpg" style="transform: rotateY(120deg) translateZ(400px);">
     <img src="img63.jpg.jpg" style="transform: rotateY(180deg) translateZ(400px);">
     <img src="img78.jpg.jpg" style="transform: rotateY(240deg) translateZ(400px);">
@@ -69,4 +69,5 @@
   </div>
 </body>
 </html>
+
 
