--- a/index.html
+++ b/index.html
@@ -65,10 +65,13 @@
 <body>
   <img src="finall_birthday.png" alt="birthday">
   <h1>🎂 Happy Birthday! 🎉</h1>
-  <p>Wishing you a day filled with love, laughter, and memories!</p>
+  <p>Happy Birthday 🌸
+You’re someone I wish to walk beside  not just for a while, but for a lifetime.
+If I ever get the chance, I’d proudly take your hand and make it my duty to see you smile every single day 💖</p>
   <a href="gallery.html" class="btn"> Click Next 🎁</a>
 </body>
 </html>
+
 
 
 
