Update birthday message and add recipient's name

--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
 </head>
 <body>
   <img src="finall_birthday.png" alt="birthday">
-  <h1>🎂 Happy Birthday! 🎉</h1>
-  <p>Happy Birthday 🌸
+  <h1>🎂 Happy Birthday! Ananya (Anu❤️)😌 🎉</h1>
+  <p>
 You’re someone I wish to walk beside  not just for a while, but for a lifetime.
 If I ever get the chance, I’d proudly take your hand and make it my duty to see you smile every single day 💖</p>
   <a href="gallery.html" class="btn"> Click Next 🎁</a>
 </body>
 </html>
+
 
 
 
