--- a/gallery.html
+++ b/gallery.html
@@ -57,8 +57,8 @@
   </style>
 </head>
 <body>
-  <h1> Happy Birthday! madamji 🎀💗᪲᪲᪲ </h1>
-  <h2> From first day I saw you in college, I never knew that a quiet “You’re from section A, right?” would become the start of something so beautiful.
+  <h1> Happy Birthday! madamji 🎀💗᪲᪲᪲ 
+ From first day I saw you in college, I never knew that a quiet “You’re from section A, right?” would become the start of something so beautiful.
 We didn’t talk much at first  just exchanged glances that spoke louder than words. And somewhere between helping you with small things, laughing over random texts, and those long conversations, you became someone I can’t imagine my days without.
 
 You once said “Ato sad thakbina sobsomoi”  and from that day, I’ve tried to live up to those words, because your voice, your smile, and your presence have a way of making even the dullest moments feel warm.
@@ -73,7 +73,8 @@ You deserve every bit of happiness, love, and calm in this world.
 And if destiny ever allows, I wish I get to be the one who gives it to you.
 
 Happy Birthday, Ananya.
-From Diptiman, who’ll always care for you, no matter what. ❤️</h2>
+From Diptiman, who’ll always care for you, no matter what. ❤️om  </h1>
+
   <div class="carousel">
     <img src="img.jpg.jpg" style="transform: rotateY(0deg) translateZ(400px);">
     <img src="img56.jpg" style="transform: rotateY(60deg) translateZ(400px);">
@@ -84,6 +85,7 @@ From Diptiman, who’ll always care for you, no matter what. ❤️</h2>
   </div>
 </body>
 </html>
+
 
 
 
